@@ -293,6 +293,8 @@ Tests
 Build
 -----
 
+- Issue #19550: Implement Windows installer changes of PEP 453 (ensurepip).
+
 - Issue #19520: Fix compiler warning in the _sha3 module on 32bit Windows.
 
 - Issue #19356: Avoid using a C variabled named "_self", it's a reserved
